# abc-book-of-koshucode

./: .gitignore
draft/: README.md
draft/A/: README.md
draft/B/: README.md
draft/C/: README.md
draft/D/: D.k  README.md
draft/E/: E3.k  README.md
draft/F/: F.k  README.md
draft/G/: README.md
draft/H/: H.k  README.md
draft/I/: README.md
draft/J/: README.md
draft/K/: K.k  README.md
draft/L/: README.md
draft/M/: README.md
draft/N/: README.md
draft/O/: O.k  README.md
draft/english/: README.md
draft/japanese/: INOUT-SUMMARY.md  README.md
draft/japanese/all/: KOSHU.k  koshu-all.sh
draft/japanese/section/: ROP.k
draft/japanese/section/W/: INOUT.md  INOUT.sh  README.md  W.k  koshu-w.cabal  koshu-w.hs
draft/section/: ROP.k
draft/section/A/: README.md
draft/section/B/: B.k  README.md
draft/section/C/: C.k  README.md
draft/section/D/: D.k  README.md
draft/section/E/: E.k  E2.k  E4.k  README.md
draft/section/F/: F.k  README.md
draft/section/G/: README.md
draft/section/H/: H.k  README.md
draft/section/I/: README.md
draft/section/J/: J.k  README.md
draft/section/K/: K.k  README.md
draft/section/L/: L.k  README.md
draft/section/M/: M.k  README.md
draft/section/N/: N.k  README.md
draft/section/O/: README.md
draft/section/P/: P.k  README.md
draft/section/Q/: Q.k  README.md
draft/section/R/: R.k  README.md
draft/section/S/: README.md  S.k
draft/section/T/: README.md
draft/section/U/: README.md  U.k
draft/section/V/: README.md  V.k
draft/section/W/: README.md  koshu-w.hs
draft/section/X/: README.md
(+84 files in other folders)
